Deploy_Manifests/K8s_Manifests/Nitro_Enclave_Daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nitro-enclave-daemon
  namespace: core-systems
  labels:
    app: nitro-enclave-daemon
spec:
  selector:
    matchLabels:
      app: nitro-enclave-daemon
  template:
    metadata:
      labels:
        app: nitro-enclave-daemon
    spec:
      containers:
        - name: enclave-manager
          image: credkellar/nitro-enclave-agent:latest
          imagePullPolicy: IfNotPresent
          # Hardened security context to pass Semgrep structural analysis
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: nitro-enclaves-dev
              mountPath: /dev/nitro_enclaves
            - name: ephemeral-storage
              mountPath: /tmp
      volumes:
        - name: nitro-enclaves-dev
          hostPath:
            path: /dev/nitro_enclaves
        - name: ephemeral-storage
          emptyDir: {}
