Deploy_Manifests/K8s_Manifests/Cilium_L4_LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-lb
  namespace: core-infrastructure
  annotations:
    io.cilium/lb-ipam-ips: "10.0.0.100"
spec:
  type: LoadBalancer
  selector:
    app: ingress-controller
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
