Deploy_Manifests/K8s_Manifests/Cilium_Clusterwide_Policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: global-infrastructure-isolation
spec:
  description: "Enforces strict cluster-wide cryptographic workload authentication boundaries."
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
