Deploy_Manifests/K8s_Manifests/Network_Deny_All.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: core-infrastructure
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - {}
  egress:
    - toEntities:
        - cluster
