Deploy_Manifests/K8s_Manifests/Network_Policy_DNS_Strict.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: dynamic-domain-allow
  namespace: core-infrastructure
spec:
  endpointSelector:
    matchLabels:
      app: localized-worker
  egress:
    - toFQDNs:
        - matchPattern: "*.vault.hashicorp.com"
        - matchName: "api.pulumi.com"
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
