Deploy_Manifests/K8s_Manifests/Network_Policy_Metrics.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: hubble-metrics-allow
  namespace: core-infrastructure
spec:
  endpointSelector:
    matchLabels:
      k8s-app: cilium
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: infrastructure-prometheus
      toPorts:
        - ports:
            - port: "9965"
              protocol: TCP
